--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="pokedex">
       <div class="data-container">
-        <figure id="img-container"><img src="icon/pokeball.png" alt=""></figure>
+        <figure id="img-container"><img src="icon/pokeball.png" alt="Pokeball"></figure>
         <table class="stats-table">
           <tr>
             <th>Name:</th>
@@ -62,9 +62,9 @@
         </table>
       </div>
       <div class="search">
-        <input type="text" id="search-input" required />
+        <input type="text" id="search-input" required autofocus/>
         <button id="search-button">
-          <img src="/icon/search_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" />
+          <img src="/icon/search_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg"  alt="search icon"/>
         </button>
       </div>
     </div>
